Feature/remove cui java util (#46)